// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`brackets.coffee 1`] = `
import {
  runTaskForChanged, description, someOtherLabel, thatMakes, itGo, multiLine, andMore, soWeCanGetItTo80Columns
} from '.'
import {fitsIn, oneLine} from '.'
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import {
  runTaskForChanged
  description
  someOtherLabel
  thatMakes
  itGo
  multiLine
  andMore
  soWeCanGetItTo80Columns
} from "."
import { fitsIn, oneLine } from "."

`;

exports[`brackets.coffee 2`] = `
import {
  runTaskForChanged, description, someOtherLabel, thatMakes, itGo, multiLine, andMore, soWeCanGetItTo80Columns
} from '.'
import {fitsIn, oneLine} from '.'
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import {
  runTaskForChanged
  description
  someOtherLabel
  thatMakes
  itGo
  multiLine
  andMore
  soWeCanGetItTo80Columns
} from "."
import {fitsIn, oneLine} from "."

`;

exports[`empty-import.coffee 1`] = `
import { } from '@types/googlemaps'
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import {} from "@types/googlemaps"

`;

exports[`empty-import.coffee 2`] = `
import { } from '@types/googlemaps'
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import {} from "@types/googlemaps"

`;

exports[`inline.coffee 1`] = `
import somethingSuperLongsomethingSuperLong from 'somethingSuperLongsomethingSuperLongsomethingSuperLong'
import {somethingSuperLongsomethingSuperLong1} from 'somethingSuperLongsomethingSuperLongsomethingSuperLong'
import a, {somethingSuperLongsomethingSuperLong2} from 'somethingSuperLongsomethingSuperLongsomethingSuperLong'
import {a1, somethingSuperLongsomethingSuperLong3} from 'somethingSuperLongsomethingSuperLongsomethingSuperLong'
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import somethingSuperLongsomethingSuperLong from "somethingSuperLongsomethingSuperLongsomethingSuperLong"
import { somethingSuperLongsomethingSuperLong1 } from "somethingSuperLongsomethingSuperLongsomethingSuperLong"
import a, {
  somethingSuperLongsomethingSuperLong2
} from "somethingSuperLongsomethingSuperLongsomethingSuperLong"
import {
  a1
  somethingSuperLongsomethingSuperLong3
} from "somethingSuperLongsomethingSuperLongsomethingSuperLong"

`;

exports[`inline.coffee 2`] = `
import somethingSuperLongsomethingSuperLong from 'somethingSuperLongsomethingSuperLongsomethingSuperLong'
import {somethingSuperLongsomethingSuperLong1} from 'somethingSuperLongsomethingSuperLongsomethingSuperLong'
import a, {somethingSuperLongsomethingSuperLong2} from 'somethingSuperLongsomethingSuperLongsomethingSuperLong'
import {a1, somethingSuperLongsomethingSuperLong3} from 'somethingSuperLongsomethingSuperLongsomethingSuperLong'
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import somethingSuperLongsomethingSuperLong from "somethingSuperLongsomethingSuperLongsomethingSuperLong"
import {somethingSuperLongsomethingSuperLong1} from "somethingSuperLongsomethingSuperLongsomethingSuperLong"
import a, {
  somethingSuperLongsomethingSuperLong2
} from "somethingSuperLongsomethingSuperLongsomethingSuperLong"
import {
  a1
  somethingSuperLongsomethingSuperLong3
} from "somethingSuperLongsomethingSuperLongsomethingSuperLong"

`;

exports[`long-line.coffee 1`] = `
import someCoolUtilWithARatherLongName from '../../../../utils/someCoolUtilWithARatherLongName'
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import someCoolUtilWithARatherLongName from "../../../../utils/someCoolUtilWithARatherLongName"

`;

exports[`long-line.coffee 2`] = `
import someCoolUtilWithARatherLongName from '../../../../utils/someCoolUtilWithARatherLongName'
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import someCoolUtilWithARatherLongName from "../../../../utils/someCoolUtilWithARatherLongName"

`;

exports[`multiple_standalones.coffee 1`] = `
import a, * as b from 'a'
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import a, * as b from "a"

`;

exports[`multiple_standalones.coffee 2`] = `
import a, * as b from 'a'
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import a, * as b from "a"

`;
